src/test/deca/context/invalid/resultats/test12_assign-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test12_assign.ass introuvable
